--- a/index.html
+++ b/index.html
@@ -176,15 +176,13 @@
 
                 International Institute of Minnesota<br>
                 Senior Teacher, Intake Interviewer, Volunteer Supervisor, Activity Guide, Festival of Nations Staff Photographer<br><br>
-
+            </h3>
                 <button class="downloadresume">
 
                     DOWNLOAD RESUME
                 </button>
 
-
-
-            </h3>
+            
         </div>
 </section>
 
@@ -231,7 +229,7 @@
 
 <section id="contactheader">
 
-            <h2>CONTACT</h2><br><br>
+            <h2>CONTACT</h2>
 
 
        <!-- Default form contact -->
@@ -239,15 +237,15 @@
 
 
     <!-- Name -->
-    <input type="text" id="defaultContactFormName" class="form-control mb-4" placeholder="Name" style = "width: 60%; padding-top: 1.5%; padding-bottom: 1.5%; margin-bottom: 2%;"><br>
+    <input type="text" id="defaultContactFormName" class="form-control mb-4" placeholder="Name" style = "width: 80%; padding-top: 2%; padding-bottom: 2%; margin-bottom: 2%;"><br>
 
     <!-- Email -->
-    <input type="email" id="defaultContactFormEmail" class="form-control mb-4" placeholder="E-mail" style = "width: 60%; padding-top: 1.5%; padding-bottom: 1.5%; margin-bottom: 2%;">
+    <input type="email" id="defaultContactFormEmail" class="form-control mb-4" placeholder="E-mail" style = "width: 80%; padding-top: 2%; padding-bottom: 2%; margin-bottom: 2%;">
 
 
     <!-- Message -->
     <div class="form-group">
-        <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="3" placeholder="Message" style = "width: 60%; padding-top: 1.5%; padding-bottom: 1.5%; margin-bottom: 2%;"></textarea>
+        <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="3" placeholder="Message" style = "width: 80%; padding-top: 2%; padding-bottom: 2%; margin-bottom: 2%;"></textarea>
     </div>
 
     
