--- a/index.html
+++ b/index.html
@@ -177,19 +177,20 @@
                 International Institute of Minnesota<br>
                 Senior Teacher, Intake Interviewer, Volunteer Supervisor, Activity Guide, Festival of Nations Staff Photographer<br><br>
             </h3>
-                <button class="downloadresume">
-
-                    DOWNLOAD RESUME
-                </button>
 
             
         </div>
+
+        <button class="downloadresume">
+            DOWNLOAD RESUME
+        </button>
+
 </section>
 
 <section id="about">
 
     <h2>ABOUT</h2>
-    <img id="aboutmephoto" src="images/About Me Photo.png" style = "display: block; margin-left: auto; margin-right: auto;">
+    <img id="aboutmephoto" src="images/About Me Photo.png">
 
         <h3>
         <span style="color: #E4A01B;">Hi, I'm Johnny!</span><br><br>
@@ -237,15 +238,15 @@
 
 
     <!-- Name -->
-    <input type="text" id="defaultContactFormName" class="form-control mb-4" placeholder="Name" style = "width: 80%; padding-top: 2%; padding-bottom: 2%; margin-bottom: 2%;"><br>
+    <input type="text" id="defaultContactFormName" class="form-control mb-4" placeholder="Name" style = "width: 80%; padding-top: 2%; padding-bottom: 2%; margin-bottom: 2%;border-radius: 8px; border: 0; padding-left: 2%; font-size: 14px;"><br>
 
     <!-- Email -->
-    <input type="email" id="defaultContactFormEmail" class="form-control mb-4" placeholder="E-mail" style = "width: 80%; padding-top: 2%; padding-bottom: 2%; margin-bottom: 2%;">
+    <input type="email" id="defaultContactFormEmail" class="form-control mb-4" placeholder="E-mail" style = "width: 80%; padding-top: 2%; padding-bottom: 2%; margin-bottom: 2%; border-radius: 8px; border: 0; padding-left: 2%; font-size: 14px;">
 
 
     <!-- Message -->
     <div class="form-group">
-        <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="3" placeholder="Message" style = "width: 80%; padding-top: 2%; padding-bottom: 2%; margin-bottom: 2%;"></textarea>
+        <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="8" placeholder="Message" style = "width: 80%; padding-top: 2%; padding-bottom: 2%; margin-bottom: 2%; border-radius: 8px; border: 0; padding-left: 2%; font-size: 14px;"></textarea>
     </div>
 
     
